src/test/deca/context/valid/created/init-champs-type-herite.deca
class A{
	
}

class B extends A{

}

class C extends B{

}

class D{
	C c;
	A a = c;
}