src/test/deca/context/invalid/created/inheritance-wrong-direction.deca
class A{
	
}
class B extends A{
	void fonction(){
	}
}
{
	A a = new A();
	a.fonction();
}
